# fullstack-ai-template

./: .gitattributes  .gitignore  AGENTS.md  CHANGES.md  README.md  improve-zai.sh  opencode-improve-zai.sh  pyproject.toml  ralph-zai.sh  ralph.sh
.claude/skills/fastapi-alembic-setup/: SKILL.md
.claude/skills/fastapi-app-factory/: SKILL.md
.claude/skills/fastapi-backend-overview/: SKILL.md
.claude/skills/fastapi-core-models/: SKILL.md
.claude/skills/fastapi-core-schemas/: SKILL.md
.claude/skills/fastapi-core-service/: SKILL.md
.claude/skills/fastapi-database-setup/: SKILL.md
.claude/skills/fastapi-exceptions/: SKILL.md
.claude/skills/fastapi-postgres-repository/: SKILL.md
.claude/skills/fastapi-project-setup/: SKILL.md
.claude/skills/fastapi-testing/: SKILL.md
.claude/skills/swarm-orchestration/: SKILL.md
.claude/skills/tanstack-client-api-layer/: SKILL.md
.claude/skills/tanstack-client-auth/: SKILL.md
.claude/skills/tanstack-react-query-mutations/: SKILL.md
.claude/skills/tanstack-react-query-patterns/: SKILL.md
.claude/skills/tanstack-react-query-setup/: SKILL.md
.claude/skills/tanstack-shadcn-setup/: SKILL.md
.claude/skills/tanstack-start-client-only/: SKILL.md
.claude/skills/tanstack-start-project-setup/: SKILL.md
.github/workflows/: backend-ci.yml  e2e-playwright.yml  frontend-ci.yml  playwright.yml
ai_fsr/: __init__.py  cli.py  init.py
docs/: architecture.md  conventions.md  troubleshooting.md
template/: .env.example  ENV_STRATEGY.md  FRONTEND_AUTH.md  FRONTEND_IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml
template/.pi/skills/add-backend-entity/: SKILL.md
template/.pi/skills/add-frontend-feature/: SKILL.md
template/.pi/skills/backend-filters/: SKILL.md
template/.pi/skills/backend-logging/: SKILL.md
template/backend/: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml
template/backend/app/: context.py  exceptions.py  main.py  routers.py
template/backend/app/core/: __init__.py  advanced_filtering.py  base_schemas.py  config.py  optional_model.py  serialized_types.py
template/backend/app/core/logging/: __init__.py  config.py  context.py  helpers.py  middleware.py  sanitizer.py
template/backend/app/core/permissions/: auth.py
template/backend/app/database/: base.py  mixins.py
template/backend/app/database/db/: __init__.py  ast.py  code_generator.py  pydantic_fields.py  statement_generator.py
template/backend/app/dependencies/: __init__.py
template/backend/app/integrations/: http_client.py
template/backend/app/middlewares/: context.py
template/backend/app/migrations/: env.py
template/backend/app/migrations/versions/: 2026_01_29_2124-6f253e9043e9_initial_migration.py  2026_03_15_0000-a1b2c3d4e5f6_add_user_id_to_item.py
template/backend/app/modules/: __init__.py
template/backend/app/modules/items/: __init__.py  dependencies.py  filters.py  models.py  repository.py  routers.py  schemas.py  service.py
template/backend/app/repositories/: __init__.py  base_repository.py  clauses.py  exceptions.py  query_builder.py  sql_repository.py
template/backend/app/services/: __init__.py  base_crud_service.py  exceptions.py  external_api_service.py
template/backend/app/user/: __init__.py  dependencies.py  filters.py  models.py  repository.py  routers.py  schemas.py  service.py
template/backend/app/user/auth/: __init__.py  exceptions.py  models.py  permissions.py  repository.py  routers.py  schemas.py  service.py
template/backend/tests/: conftest.py
template/backend/tests/integration/: conftest.py  pytest.ini  test_app.py
template/backend/tests/unit/: conftest.py
template/backend/tests/unit/context/: test_request_context.py  test_wide_event_context.py
template/backend/tests/unit/core/: test_advanced_filtering.py  test_logging_context.py  test_logging_helpers.py  test_optional_model.py  test_sanitizer.py  test_serialized_types.py
template/backend/tests/unit/core_logging/: test_logging_helpers.py  test_wide_event_context.py
template/backend/tests/unit/dependencies/: test_dependencies.py
template/backend/tests/unit/exceptions/: test_auth_exceptions.py  test_http_exception_mixin.py  test_repository_exceptions.py
template/backend/tests/unit/filters/: test_item_filter.py  test_user_filter.py
template/backend/tests/unit/middleware/: test_request_context_middleware.py  test_wide_event_middleware.py
template/backend/tests/unit/models/: test_database_base.py  test_item_model.py  test_mixins.py  test_user_model.py
template/backend/tests/unit/repositories/: test_auth_repository.py  test_clauses.py  test_item_repository.py  test_query_builder.py  test_sql_repository.py  test_user_repository.py
template/backend/tests/unit/schemas/: test_auth_schemas.py  test_item_schemas.py  test_user_schemas.py
template/backend/tests/unit/services/: conftest.py  test_auth_router.py  test_auth_service.py  test_authenticated_user.py  test_base_crud_service.py  test_external_api_service.py  test_item_router.py  test_item_service.py  test_oauth.py  test_user_router.py  test_user_service.py
template/backend/tests/unit/stmt_generator/: schemas.py  test_pydantic_fields.py  test_statement_generator.py
template/frontend/: .dockerignore  .editorconfig  .env.example  .prettierignore  AGENTS.md  DEMO_PAGE.md  Dockerfile  FRONTEND_ARCHITECTURE.md  README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
template/frontend/.husky/: pre-commit
template/frontend/e2e/: auth.spec.ts  items.spec.ts
template/frontend/playwright-report/: index.html
template/frontend/src/: routeTree.gen.ts
template/frontend/src/components/: AuthFormFields.tsx  AuthFormShell.test.tsx  AuthFormShell.tsx  CreateItemDialog.tsx  DeleteItemDialog.tsx  EditItemDialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ItemFormDialog.tsx  Layout.tsx  Navigation.test.tsx  Navigation.tsx
template/frontend/src/contexts/: AuthContext.test.tsx  AuthContext.tsx
template/frontend/src/data/: demo.punk-songs.ts
(+41 files in other folders)
