[project]
name = "ai-fsr"
version = "0.1.0"
description = "AI Full-Stack Ready - CLI for generating production-ready full-stack projects"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "TechWarely", email = "contact@techwarely.com" }
]
keywords = ["fastapi", "tanstack", "postgres", "cli", "generator", "template"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "pytest>=8.3.0",
]

[project.scripts]
ai-fsr = "ai_fsr.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_fsr"]

# Include the template directory in the package
[tool.hatch.build.targets.wheel.force-include]
"template" = "ai_fsr/template"

# ---------- Ruff ----------
[tool.ruff]
target-version = "py312"
line-length = 88
src = ["ai_fsr"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length (handled by formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["ai_fsr"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
