[project]
name = "backend-template"
version = "0.1.0"
description = "Generic FastAPI backend template with async SQLAlchemy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sentry-sdk[fastapi]>=2.14.0",
    "fastapi>=0.115.0",
    "pydantic[email]>=2.9.2",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "uvicorn>=0.31.0",
    "pydantic-settings>=2.5.2",
    "httpx>=0.27.0",
    "fastapi-filter>=2.0.0",
    "fastapi-pagination>=0.12.27",
    "alembic>=1.14.0",
    "psycopg[binary]>=3.1.0",
    "alembic-postgresql-enum>=1.5.0",
    "loguru>=0.7.3",
    "argon2-cffi>=25.1.0",
    "requests-oauthlib>=2.0.0",
]

[dependency-groups]
dev = [
    "greenlet>=3.0.0",
    "jupyterlab>=4.3.5",
    "pre-commit>=4.0.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[postgres]>=4.0.0",
    "ruff>=0.9.1",
    "types-requests>=2.32.0.20250401",
]
[tool.black]
line-length = 100

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
    "TCH",  # type-checking
    "PYI",  # pyi
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "F821", # undefined name
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".ty_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = [
    "*__init__*",
    ".venv/*",
]

[tool.coverage.report]
omit = [
    "*__init__*",
    ".venv/*",
    "tests/*",
    "app/core/db*", # This should be an external package
    "notebooks/*",
]
exclude_lines = [
    "if __name__ == .__main__.:"
]

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = [
    "**/migrations/**",
    "**/__pycache__/**",
]

[tool.ty.rules]
unresolved-import = "warn"

[tool.ty.analysis]
respect-type-ignore-comments = true
allowed-unresolved-imports = [
    "fastapi_filter.**",
    "fastapi_pagination.**",
]

[tool.pylint]
disable = [
    "C0116",  # Missing function or method docstring
    "C0115",  # Missing class docstring
    "C0114",  # Missing module docstring
    "R0903",  # Too few public methods
    "R0902",  # Too many instance attributes
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
    "R0915",  # Too many statements
]
